--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,8 @@
     </header>
     <nav>
         <a href="{{ url_for('main.index') }}">Accueil</a>
+        <a href="{{ url_for('main.rechercher') }}">Recherche</a>
+
         {% if current_user.is_authenticated %}
             <a href="{{ url_for('main.dashboard') }}">Tableau de bord</a>
             <a href="{{ url_for('auth.logout') }}">Déconnexion</a>
