L'index affiche tout (et ça marche)

--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -93,6 +93,6 @@
     </div>
 
     <!-- Bouton retour -->
-    <a href="{{ url_for('main.afficher_etablissements') }}" class="btn-back">← Retour à la liste</a>
+    <a href="{{ url_for('main.rechercher') }}" class="btn-back">← Retour à la liste</a>
 </div>
 {% endblock %}
