--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,7 +1,49 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Tableau de bord</h1>
-<p>Bienvenue, {{ current_user.pseudo }} !</p>
-<a href="{{ url_for('auth.logout') }}">Se déconnecter</a>
+  <h1>Dashboard</h1>
+  <form method="POST" action="">
+      {{ form.hidden_tag() }}
+      <div>
+          {{ form.pseudo.label }}<br>
+          {{ form.pseudo(size=20) }}<br>
+          {% for error in form.pseudo.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+      </div>
+      <div>
+          {{ form.email.label }}<br>
+          {{ form.email(size=20) }}<br>
+          {% for error in form.email.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+      </div>
+      <div>
+          {{ form.current_password.label }}<br>
+          {{ form.current_password(size=20) }}<br>
+          {% for error in form.current_password.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+      </div>
+      <div>
+          {{ form.new_password.label }}<br>
+          {{ form.new_password(size=20) }}<br>
+          {% for error in form.new_password.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+      </div>
+      <div>
+          {{ form.confirm_password.label }}<br>
+          {{ form.confirm_password(size=20) }}<br>
+          {% for error in form.confirm_password.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+          {% endfor %}
+      </div>
+      <div>
+          {{ form.submit() }}
+      </div>
+  </form>
+  <form method="POST" action="{{ url_for('auth.supprimer_compte') }}">
+      <button type="submit">Supprimer le compte</button>
+  </form>
 {% endblock %}
