--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -183,6 +183,14 @@ h1 {
     color: white;
 }
 
+.btn-danger {
+    background-color: #e74c3c;
+    color: white;
+}
+.btn-danger:hover {
+    background-color: #c0392b;
+}
+
 
 /* Formulaires */
 form {
