--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,60 +1,63 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Tableau de bord</h1>
-  <div id="user-info">
-      <p><strong>Pseudo:</strong> {{ current_user.pseudo }}</p>
-      <p><strong>Email:</strong> {{ current_user.email }}</p>
-      <button id="edit-profile-btn" class="btn btn-primary">Modifier le profil</button>
-  </div>
+  <div class="container">
+      <h1>Tableau de bord</h1>
+      <div id="user-info" class="etablissement-header">
+          <p><strong>Pseudo:</strong> {{ current_user.pseudo }}</p>
+          <p><strong>Email:</strong> {{ current_user.email }}</p>
+          <div style="text-align: right;">
+              <button id="edit-profile-btn" class="btn btn-primary">Modifier le compte</button>
+              <form method="POST" action="{{ url_for('auth.supprimer_compte') }}" style="display: inline-block;">
+                  <button type="submit" class="btn btn-danger">Supprimer le compte</button>
+              </form>
+          </div>
+      </div>
 
-  <div id="edit-profile-form" style="display: none;">
-      <form method="POST" action="">
-          {{ form.hidden_tag() }}
-          <div>
-              {{ form.pseudo.label }}<br>
-              {{ form.pseudo(size=20) }}<br>
-              {% for error in form.pseudo.errors %}
-              <span style="color: red;">[{{ error }}]</span>
-              {% endfor %}
-          </div>
-          <div>
-              {{ form.email.label }}<br>
-              {{ form.email(size=20) }}<br>
-              {% for error in form.email.errors %}
-              <span style="color: red;">[{{ error }}]</span>
-              {% endfor %}
-          </div>
-          <div>
-              {{ form.current_password.label }}<br>
-              {{ form.current_password(size=20) }}<br>
-              {% for error in form.current_password.errors %}
-              <span style="color: red;">[{{ error }}]</span>
-              {% endfor %}
-          </div>
-          <div>
-              {{ form.new_password.label }}<br>
-              {{ form.new_password(size=20) }}<br>
-              {% for error in form.new_password.errors %}
-              <span style="color: red;">[{{ error }}]</span>
-              {% endfor %}
-          </div>
-          <div>
-              {{ form.confirm_password.label }}<br>
-              {{ form.confirm_password(size=20) }}<br>
-              {% for error in form.confirm_password.errors %}
-              <span style="color: red;">[{{ error }}]</span>
-              {% endfor %}
-          </div>
-          <div>
-              {{ form.submit() }}
-          </div>
-      </form>
+      <div id="edit-profile-form" style="display: none;">
+          <form method="POST" action="" class="form">
+              {{ form.hidden_tag() }}
+              <div class="form-group">
+                  {{ form.pseudo.label }}<br>
+                  {{ form.pseudo(size=20, class="form-control") }}<br>
+                  {% for error in form.pseudo.errors %}
+                  <span class="error-message">[{{ error }}]</span>
+                  {% endfor %}
+              </div>
+              <div class="form-group">
+                  {{ form.email.label }}<br>
+                  {{ form.email(size=20, class="form-control") }}<br>
+                  {% for error in form.email.errors %}
+                  <span class="error-message">[{{ error }}]</span>
+                  {% endfor %}
+              </div>
+              <div class="form-group">
+                  {{ form.current_password.label }}<br>
+                  {{ form.current_password(size=20, class="form-control") }}<br>
+                  {% for error in form.current_password.errors %}
+                  <span class="error-message">[{{ error }}]</span>
+                  {% endfor %}
+              </div>
+              <div class="form-group">
+                  {{ form.new_password.label }}<br>
+                  {{ form.new_password(size=20, class="form-control") }}<br>
+                  {% for error in form.new_password.errors %}
+                  <span class="error-message">[{{ error }}]</span>
+                  {% endfor %}
+              </div>
+              <div class="form-group">
+                  {{ form.confirm_password.label }}<br>
+                  {{ form.confirm_password(size=20, class="form-control") }}<br>
+                  {% for error in form.confirm_password.errors %}
+                  <span class="error-message">[{{ error }}]</span>
+                  {% endfor %}
+              </div>
+              <div class="form-group">
+                  {{ form.submit(class="btn btn-submit") }}
+              </div>
+          </form>
+      </div>
   </div>
-
-  <form method="POST" action="{{ url_for('auth.supprimer_compte') }}">
-      <button type="submit">Supprimer le compte</button>
-  </form>
 
   <script>
       document.getElementById('edit-profile-btn').addEventListener('click', function() {
