--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -7,13 +6,13 @@
             <h2 class="text-center mb-4">Connexion</h2>
             <form method="POST" action="{{ url_for('auth.login') }}">
                 {{ form.hidden_tag() }}
-                <div class="mb-3">
+                <div class="form-group">
                     {{ form.pseudo.label(class="form-label") }}
-                    {{ form.pseudo(class="form-control", placeholder="Votre pseudo") }}
+                    {{ form.pseudo(placeholder="Votre pseudo") }}
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     {{ form.password.label(class="form-label") }}
-                    {{ form.password(class="form-control", placeholder="Votre mot de passe") }}
+                    {{ form.password(placeholder="Votre mot de passe") }}
                 </div>
                 <div class="d-grid gap-2">
                     {{ form.submit(class="btn btn-primary") }}
