--- a/app/templates/liste_etablissements.html
+++ b/app/templates/liste_etablissements.html
@@ -27,11 +27,11 @@ window.initMap = function() {
         // L'icône change selon que le lieu a éré visité et/ou labellisé
         let icon;
         if (etablissement.visite && etablissement.label) {
-            icon = "http://maps.google.com/mapfiles/ms/icons/blue-dot.png";
+            icon = "http://maps.google.com/mapfiles/ms/icons/yellow-dot.png";
         } else if (etablissement.visite) {
             icon = "http://maps.google.com/mapfiles/ms/icons/red-dot.png";
         } else {
-            icon = "http://maps.google.com/mapfiles/ms/icons/orange-dot.png";
+            icon = "http://maps.google.com/mapfiles/ms/icons/blue-dot.png";
         }
         const marker = new google.maps.Marker({
             position: { lat: etablissement.latitude, lng: etablissement.longitude },
@@ -57,6 +57,24 @@ window.initMap = function() {
         });
         markers.push(marker);
     });
+       // Créer un élément div pour la légende
+    const legend = document.createElement('div');
+    legend.style.backgroundColor = 'white';
+    legend.style.padding = '10px';
+    legend.style.margin = '10px';
+    legend.style.border = '1px solid #ccc';
+
+    // Ajouter le contenu de la légende
+    legend.innerHTML = `
+        <h3>Légende</h3>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/blue-dot.png" alt="Non visité">Non visité</p>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/red-dot.png" alt="Visité"> Visité</p>
+        <p><img src="http://maps.google.com/mapfiles/ms/icons/yellow-dot.png" alt="Labellisé">Labellisé</p>
+
+    `;
+
+    // Ajouter la légende à la carte
+    map.controls[google.maps.ControlPosition.LEFT_BOTTOM].push(legend);
 };
 
 </script>
